--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ To enhance educational outcomes, "Bright Spark" incorporates carefully curated g
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member aos-init" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/sandu.jpg" class="img-fluid" alt="">
+                <img src="assets/img/tharindi.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.linkedin.com/in/tharindi-rajapaksha-b5a18023b/" target="blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: ;msFilter:;"><circle cx="4.983" cy="5.009" r="2.188"></circle><path d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118 1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z"></path></svg></a>
                 </div>
@@ -752,8 +752,8 @@ To enhance educational outcomes, "Bright Spark" incorporates carefully curated g
 <section id="contact" class="contact">
   <div class="container">
     <div class="section-title aos-init" data-aos="zoom-out">
-      <h2>Bright Spark Demonstrate</h2>
-      <p></p>
+      <h2>Demonstrate</h2>
+      <p>Bright Spark Demonstrate</p>
     </div>
 
     <!-- Main Video -->
