--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ To enhance educational outcomes, "Bright Spark" incorporates carefully curated g
 
     <!-- Main Video -->
     <div style="position: relative; padding-bottom: 56.25%; padding-top: 25px; height: 0;">
-      <iframe src="https://www.youtube.com/embed/uH6PrbtXl0s?si=Q64JTX8_JU9pfOZR" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+      <iframe src="https://www.youtube.com/embed/LjAhF0lwssw?si=Q6_M7KIRdYrUbAxr" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
     </div>
   </div>
 </section><!-- End video Section -->
@@ -839,7 +839,7 @@ To enhance educational outcomes, "Bright Spark" incorporates carefully curated g
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3 style="padding-bottom: 1%;">Bright Spark - App</h3>
+      <h3 style="padding-bottom: 1%;">Bright Spark</h3>
       
       <div class="social-links">
         <a href="https://www.facebook.com/people/Bright-Spark/61557157393850/" class="facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: ;msFilter:;"><path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"></path></svg></a>
