--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/favicon2.png" rel="icon">
   <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -181,7 +181,7 @@ To enhance educational outcomes, "Bright Spark" incorporates carefully curated g
             </div>            
           </div> -->
           <div class="col-lg-6 order-1 order-lg-2 aos-init" data-aos="fade-left">
-            <img src="assets/img/ss2.png" class="img-fluid" alt="image1">
+            <img src="assets/img/hero1.png" class="img-fluid" alt="image1">
           </div>
         </div>
 
